[package]
name = "rust_fuse_project"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmaps = "3.2.1"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
fuser = "0.17"
libc = "0.2.182"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3.26.0"
